# monglepick-recommend

./: pyproject.toml
.github/workflows/: ci-cd.yml
app/: main.py
app/api/: search.py
app/model/: entity.py  schema.py
app/repository/: movie_repository.py
app/service/: onboarding_service.py  search_service.py  worldcup_service.py
app/v2/: __init__.py
app/v2/api/: deps.py  onboarding.py  router.py  search.py
app/v2/core/: database.py
app/v2/model/: dto.py
app/v2/repository/: movie_repository.py  search_history_repository.py  trending_repository.py  user_preference_repository.py
app/v2/service/: autocomplete_service.py  onboarding_service.py  search_service.py  trending_service.py  worldcup_service.py
tests/: test_search.py
